<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Player2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:text="@string/tutorial"
            android:textSize="@dimen/textview_heading_size"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/materialRippleLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleAlpha="1"
                app:mrl_rippleColor="@color/colorRipplePlayer2"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/buttonPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorButtonPlayer2"
                    android:gravity="center"
                    android:text="" />

            </com.balysv.materialripple.MaterialRippleLayout>


            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:gravity="top|center"
                android:padding="@dimen/textview_padding"
                android:text="@string/step1"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textview_normal_text"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/tutorial_margin_bottom"
        android:background="@color/colorRipplePlayer1"
        android:paddingBottom="@dimen/button_padding_horizontal"
        android:paddingLeft="@dimen/button_padding_vertical"
        android:paddingRight="@dimen/button_padding_vertical"
        android:paddingTop="@dimen/button_padding_horizontal"
        android:text="@string/let_s_start"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textview_normal_text"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/description"
        android:padding="@dimen/pause_imageview_padding"
        android:scaleType="fitEnd"
        android:src="@drawable/touchdown4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pause_bottom_bar_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonRestart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_replay" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/restart"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/imageButtonSkip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip" />

    </LinearLayout>

</FrameLayout>
