<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Player2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/textview_single_player_margin"
            android:layout_marginTop="@dimen/textview_single_player_margin"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:text="@string/touch_to_start"
            android:textSize="@dimen/textview_heading_size"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/rippleEffect1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleAlpha="1"
                app:mrl_rippleColor="@color/colorRipplePlayer1"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/buttonPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorButtonPlayer1"
                    android:gravity="center"
                    android:text="" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutLives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_add_margin"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewLife1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_add_margin"
                        android:src="@drawable/ic_feather" />

                    <ImageView
                        android:id="@+id/imageViewLife2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_add_margin"
                        android:src="@drawable/ic_feather" />

                    <ImageView
                        android:id="@+id/imageViewLife3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_add_margin"
                        android:src="@drawable/ic_feather" />

                    <ImageView
                        android:id="@+id/imageViewLife4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_add_margin"
                        android:src="@drawable/ic_feather" />

                    <ImageView
                        android:id="@+id/imageViewLife5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_add_margin"
                        android:src="@drawable/ic_feather" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewScorePlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/textview_padding"
                    android:clickable="false"
                    android:gravity="top|center"
                    android:text="@string/Score0"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textiew_score_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewLosePoints1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/description"
                android:scaleType="centerInside"
                android:src="@drawable/poop"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageViewGainPoints1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/description"
                android:scaleType="centerInside"
                android:src="@drawable/eagle"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewHighScore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/textview_padding"
                android:clickable="false"
                android:gravity="bottom|center"
                android:text="@string/high_score"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textview_heading_size"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPauseContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRipplePlayer3"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible">


        <LinearLayout
            android:id="@+id/linearLayoutPauseButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButtonRestart"
                    android:layout_width="@dimen/pause_button_size"
                    android:layout_height="@dimen/pause_button_size"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/restart"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_replay" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButtonPlay"
                    android:layout_width="@dimen/pause_button_size"
                    android:layout_height="@dimen/pause_button_size"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/play"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_play" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButtonMenu"
                    android:layout_width="@dimen/pause_button_size"
                    android:layout_height="@dimen/pause_button_size"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/menu"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_menu" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
